--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -40,9 +40,10 @@ dependencies = [
     # Audio Processing (lightweight)
     "soundfile>=0.12.1",
     "scipy>=1.12.0",
+    "numpy>=1.24.0",
 
-    # Cloud Storage (optional — local storage is the default)
-    "boto3>=1.34.0",
+    # SQLite async support (local development)
+    "aiosqlite>=0.19.0",
 
     # Utilities
     "httpx>=0.26.0",
@@ -53,6 +54,9 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+s3 = [
+    "boto3>=1.34.0",
+]
 ml = [
     # Full audio processing
     "librosa>=0.10.1",
@@ -64,6 +68,9 @@ ml = [
     "torchaudio>=2.1.0",
     "einops>=0.7.0",
     "transformers>=4.36.0",
+
+    # Cloud storage for production
+    "boto3>=1.34.0",
 
     # Monitoring
     "sentry-sdk[fastapi]>=1.39.0",
