Add CI/CD, fix deployment configs for Render/Railway
- GitHub Actions CI: backend lint+test, frontend typecheck+build
- config.py: accept DATABASE_URL and REDIS_URL directly (Render/Railway inject these)
- render.yaml: fix Redis as proper service, update Node to 20
- docker-compose: explicit PostgreSQL connection settings
- .env.railway: use platform-injected secrets instead of hardcoded values

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,10 @@ services:
       - DEBUG=${DEBUG:-true}
       - DB_BACKEND=postgresql
       - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=voiceforge
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-voiceforge_secret}
+      - POSTGRES_DB=voiceforge
       - REDIS_HOST=redis
       - STORAGE_BACKEND=${STORAGE_BACKEND:-local}
       - BACKEND_CORS_ORIGINS=${BACKEND_CORS_ORIGINS:-http://localhost:3000}
