--- a/.env.railway
+++ b/.env.railway
@@ -1,15 +1,15 @@
 APP_ENV=production
 DEBUG=false
-SECRET_KEY=JP_14jeMGqupQYBKV8FJS9Z7kCjiBXiKQnzDHgvsbJ4
+SECRET_KEY=${SECRET_KEY}
 BACKEND_HOST=0.0.0.0
 BACKEND_PORT=${PORT}
 BACKEND_CORS_ORIGINS=*
 
-# Database - Railway will inject DATABASE_URL automatically
+# Database - Railway injects DATABASE_URL automatically
 DB_BACKEND=postgresql
 DATABASE_URL=${DATABASE_URL}
 
-# Redis - Railway will inject REDIS_URL automatically  
+# Redis - Railway injects REDIS_URL automatically
 REDIS_URL=${REDIS_URL}
 
 # Storage (use local for now, switch to S3 later)
@@ -17,7 +17,7 @@ STORAGE_BACKEND=local
 LOCAL_STORAGE_DIR=/app/storage
 
 # Auth
-JWT_SECRET_KEY=W2Z0aDZeNmU48Vt43qtTS_in38Xf_DPeXg8Yu32LL8A
+JWT_SECRET_KEY=${JWT_SECRET_KEY}
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=60
 JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 
@@ -25,8 +25,7 @@ JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 TORCH_DEVICE=cpu
 MIN_RECORDINGS_FOR_TRAINING=5
 AUDIO_SAMPLE_RATE=22050
-AUDIO_BIT_DEPTH=16
-MAX_AUDIO_DURATION_SECONDS=30
+MAX_RECORDING_DURATION_SECONDS=30
 
 # Celery
 CELERY_BROKER_URL=${REDIS_URL}
