--- a/render.yaml
+++ b/render.yaml
@@ -65,7 +65,15 @@ services:
       - key: NEXT_PUBLIC_WS_URL
         value: wss://voiceforge-api.onrender.com/ws
       - key: NODE_VERSION
-        value: 18
+        value: 20
+
+  # Redis
+  - type: redis
+    name: voiceforge-redis
+    plan: free
+    region: oregon
+    maxmemoryPolicy: noeviction
+    ipAllowList: []
 
 databases:
   - name: voiceforge-db
@@ -73,8 +81,3 @@ databases:
     user: voiceforge
     plan: free
     region: oregon
-
-  - name: voiceforge-redis
-    plan: free
-    region: oregon
-    maxmemoryPolicy: noeviction
