Rename all configs to Aasirbad, fix render.yaml for deployment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,5 +68,5 @@ jobs:
 
       - name: Build
         env:
-          NEXT_PUBLIC_API_URL: https://voiceforge-api.onrender.com/api/v1
+          NEXT_PUBLIC_API_URL: https://aasirbad-api.onrender.com/api/v1
         run: npm run build
