--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 services:
   # Backend API
   - type: web
-    name: voiceforge-api
-    env: python
+    name: aasirbad-api
+    runtime: python
     region: oregon
     plan: free
     rootDir: backend
-    buildCommand: pip install -e .
+    buildCommand: pip install -e ".[dev]" && pip install aiosqlite
     startCommand: alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
@@ -20,12 +20,12 @@ services:
         value: postgresql
       - key: DATABASE_URL
         fromDatabase:
-          name: voiceforge-db
+          name: aasirbad-db
           property: connectionString
       - key: REDIS_URL
         fromService:
           type: redis
-          name: voiceforge-redis
+          name: aasirbad-redis
           property: connectionString
       - key: STORAGE_BACKEND
         value: local
@@ -48,12 +48,12 @@ services:
       - key: LOG_LEVEL
         value: INFO
       - key: BACKEND_CORS_ORIGINS
-        value: "*"
+        value: "https://aasirbad.onrender.com,https://aasirbad-frontend.onrender.com"
 
   # Frontend
   - type: web
-    name: voiceforge-frontend
-    env: node
+    name: aasirbad-frontend
+    runtime: node
     region: oregon
     plan: free
     rootDir: frontend
@@ -61,23 +61,23 @@ services:
     startCommand: npm start
     envVars:
       - key: NEXT_PUBLIC_API_URL
-        value: https://voiceforge-api.onrender.com/api/v1
+        value: https://aasirbad-api.onrender.com/api/v1
       - key: NEXT_PUBLIC_WS_URL
-        value: wss://voiceforge-api.onrender.com/ws
+        value: wss://aasirbad-api.onrender.com/ws
       - key: NODE_VERSION
         value: 20
 
   # Redis
   - type: redis
-    name: voiceforge-redis
+    name: aasirbad-redis
     plan: free
     region: oregon
     maxmemoryPolicy: noeviction
     ipAllowList: []
 
 databases:
-  - name: voiceforge-db
-    databaseName: voiceforge
-    user: voiceforge
+  - name: aasirbad-db
+    databaseName: aasirbad
+    user: aasirbad
     plan: free
     region: oregon
