Add DB connection retry for Render provisioning delay
- wait_for_db() retries 10x with 3s delay before giving up
- App starts even if DB not ready (won't crash on ConnectionRefused)
- startCommand: alembic runs with fallback, uvicorn always starts
- Reduce pool_size from 20 to 5 (appropriate for free tier)
- Import models in init_db to ensure tables are registered

--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     plan: free
     rootDir: backend
     buildCommand: pip install -e "." && pip install psycopg2-binary aiosqlite
-    startCommand: alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: alembic upgrade head 2>&1 || echo 'Alembic migration skipped'; uvicorn app.main:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
       - key: APP_ENV
