Switch to Neon PostgreSQL (free, always-on)
- Render free DB sleeps after 15min, causing connection refused crashes
- Added SSL support for Neon/Supabase cloud databases (asyncpg + psycopg2)
- Reduced pool size to 3 (appropriate for serverless PG)
- Removed Render managed DB dependency from render.yaml
- DATABASE_URL now set manually in Render dashboard (Neon connection string)
- pool_recycle reduced to 300s for serverless connection hygiene

--- a/render.yaml
+++ b/render.yaml
@@ -19,9 +19,7 @@ services:
       - key: DB_BACKEND
         value: postgresql
       - key: DATABASE_URL
-        fromDatabase:
-          name: aasirbad-db
-          property: connectionString
+        sync: false  # Set manually in Render dashboard — paste your Neon connection string
       - key: REDIS_URL
         fromService:
           type: redis
@@ -75,9 +73,5 @@ services:
     maxmemoryPolicy: noeviction
     ipAllowList: []
 
-databases:
-  - name: aasirbad-db
-    databaseName: aasirbad
-    user: aasirbad
-    plan: free
-    region: oregon
+# Database hosted on Neon (free, always-on PostgreSQL)
+# Set DATABASE_URL in Render dashboard Environment tab
