Fix Docker build paths and deploy config for DigitalOcean
- Dockerfile.backend: COPY paths updated for root context (backend/)
- Dockerfile.worker: COPY paths updated, rebranded to Aasirbad
- docker-compose: flower service now uses correct Dockerfile path
- deploy/setup-server.sh: fixed .env template indentation, updated messages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -146,8 +146,8 @@ services:
   # ── Celery Flower (monitoring) ───────────────────────────
   flower:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: dockerfiles/Dockerfile.backend
     container_name: aasirbad-flower
     environment:
       - REDIS_HOST=redis
