--- a/dockerfiles/Dockerfile.worker
+++ b/dockerfiles/Dockerfile.worker
@@ -1,5 +1,5 @@
 # ============================================================
-# VoiceForge GPU Worker Dockerfile
+# Aasirbad GPU Worker Dockerfile
 # Includes CUDA support for Tortoise TTS training
 # ============================================================
 
@@ -22,17 +22,17 @@ RUN update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1
     && update-alternatives --install /usr/bin/python python /usr/bin/python3.11 1
 
 # Install Python dependencies
-COPY pyproject.toml ./
+COPY backend/pyproject.toml ./
 RUN pip install --no-cache-dir .
 
 # Copy application code
-COPY app/ ./app/
+COPY backend/app/ ./app/
 
 # Create non-root user
-RUN groupadd -r voiceforge && useradd -r -g voiceforge voiceforge
-RUN mkdir -p /app/models && chown -R voiceforge:voiceforge /app
+RUN groupadd -r aasirbad && useradd -r -g aasirbad aasirbad
+RUN mkdir -p /app/models && chown -R aasirbad:aasirbad /app
 
-USER voiceforge
+USER aasirbad
 
 # Environment for GPU
 ENV NVIDIA_VISIBLE_DEVICES=all
