Add domain SSL config and Capacitor iOS setup
- Configure aasirbad.works with Let's Encrypt SSL certificate
- Update nginx config with actual domain and SSL paths
- Add Capacitor core, CLI, iOS platform, and native plugins
- Create capacitor.config.ts with live URL server mode
- Add iOS build scripts to package.json
- Detect Capacitor in API client for absolute URL routing
- Update .gitignore for iOS/Android native project dirs
- Install Node 22 (required by Capacitor 7)

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,10 @@ trained_models/
 storage/
 *.db
 
+# Capacitor iOS/Android native projects
+frontend/ios/
+frontend/android/
+
 # Docker
 docker-compose.override.yml
 
