--- a/deploy/nginx/aasirbad.conf
+++ b/deploy/nginx/aasirbad.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name aasirbad.works www.aasirbad.works;
 
     # Redirect all HTTP to HTTPS
     return 301 https://$host$request_uri;
@@ -8,11 +8,11 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name _;  # Replace with your actual domain
+    server_name aasirbad.works www.aasirbad.works;
 
     # SSL certificates (managed by Certbot)
-    ssl_certificate     /etc/letsencrypt/live/YOUR_DOMAIN/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/YOUR_DOMAIN/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/aasirbad.works/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/aasirbad.works/privkey.pem;
 
     # SSL settings
     ssl_protocols TLSv1.2 TLSv1.3;
