--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,16 +7,27 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "build:ios": "mkdir -p out && cp out/index.html out/index.html 2>/dev/null || echo '<!DOCTYPE html><html><head><meta charset=utf-8><title>आसिर्बाद</title></head><body><p>Loading...</p></body></html>' > out/index.html",
+    "cap:init": "npx cap add ios",
+    "cap:sync": "npx cap sync ios",
+    "cap:open": "npx cap open ios",
+    "ios": "npm run build:ios && npx cap sync ios && npx cap open ios"
   },
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@capacitor/cli": "^8.1.0",
+    "@capacitor/core": "^8.1.0",
+    "@capacitor/haptics": "^8.0.0",
+    "@capacitor/ios": "^8.1.0",
+    "@capacitor/keyboard": "^8.0.0",
+    "@capacitor/status-bar": "^8.0.1",
     "@heroicons/react": "^2.1.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.312.0",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sonner": "^1.3.0",
     "zustand": "^4.5.0"
   },
